--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "npm run build && npm run start:server",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install --legacy-peer-deps && npm run build && npm start"
+    "heroku-postbuild": "npm install --legacy-peer-deps && npm run build"
   },
   "eslintConfig": {
     "extends": [
